Fix repsonsive food ingredient forms on smallest viewports.

--- a/styles.scss
+++ b/styles.scss
@@ -864,16 +864,16 @@ q {
   border-bottom: $list-group-border-width solid $list-group-border-color;
   display: grid;
   grid-gap: 5px 10px;
-  grid-template-columns: 116px 1fr 1fr auto 120px 31px;
+  grid-template-columns: 100px 1fr 1fr auto 120px 31px;
   grid-template-areas:
     "massInputWrapper ingredientSelector countrySelector    bioCheckbox        impactDisplay     ingredientDelete"
     ".                ingredientBonuses  ingredientBonuses  ingredientBonuses  ingredientBonuses .               "
     ".                .                  transportDistances transportDistances transportImpact   .               ";
-  padding: $list-group-item-padding-y $list-group-item-padding-x;
   align-items: center;
 
   @media screen and (max-width: $viewport-md) {
-    grid-template-columns: 90px 1fr 70px 31px;
+    grid-gap: 5px;
+    grid-template-columns: 90px 1fr 60px 31px;
     grid-template-areas:
       "massInputWrapper   ingredientSelector impactDisplay     impactDisplay"
       "countrySelector    countrySelector    bioCheckbox       ingredientDelete"
@@ -911,7 +911,13 @@ q {
   .MassInputWrapper {
     grid-area: massInputWrapper;
     min-width: 90px;
-    max-width: 116px;
+    max-width: 100px;
+    .form-control {
+      padding-right: 0;
+    }
+    .input-group-text {
+      padding-left: 4px;
+    }
   }
   .IngredientBonuses {
     grid-area: ingredientBonuses;
